<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_tab2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.tabs.FavorPage"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_tab2">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/tab2_description"
        android:padding="20dp">

        <Button
            android:id="@+id/new_favor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/new_favor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <ListView
            android:id="@+id/favor_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/new_favor"
            android:layout_marginBottom="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>