...
            android:minLines="8"
            android:scrollbars="vertical"

            app:layout_constraintTop_toBottomOf="@id/datetime" />

        <Button
            android:id="@+id/add_button"

            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:layout_marginTop="604dp"
            android:text="@string/favor_confirm_button"
...
