...
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="20dp">


        <Button
            android:id="@+id/request_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favor_confirm_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/title_request_view"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"

            android:autofillHints=""
...
