...
    <string name="optional_text">Optional</string>
    <string name="upload_pic_btn">upload picture</string>
    <string name="camera_btn">open camera</string>

    <string name="set_location_message">The favor location is set to your current position. Would you like to change it?</string>
    <string name="set_location_yes">Yes, take me to the map</string>
    <string name="set_location_no">No, my current position is fine</string>
    <string name="done_from_request_view">Done</string>
    <!--Chat Share location -->
    <string name="share_location_message">Would you like to propose a new location or share your current location?</string>
    <string name="share_location_propose">I\'d like to share a new location</string>
    <string name="share_location_current">Share my current location</string>
    <!-- List item menu -->
...
