...
            android:scrollbars="vertical"
            android:clipToPadding="false"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:layout_marginBottom="@dimen/toolbar_height"
            tools:listitem="@layout/favor_list_item"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nearby_tip"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/nearby_favor_list"
            app:layout_constraintBottom_toBottomOf="@id/nearby_favor_list"
...
