<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
<!--    <item-->
<!--        android:id="@+id/spinner"-->
<!--        android:title="@string/actionbar_spinner"-->
<!--        app:actionViewClass="android.widget.Spinner"-->
<!--        app:showAsAction="always" />-->
    <item android:id="@+id/search_item"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:title="@string/searchView_title" />
</menu>
