...
        android:id="@+id/nav_map"
        android:name="ch.epfl.favo.view.tabs.MapPage"
        android:label="Map"
        tools:layout="@layout/fragment_map">
        <action
            android:id="@+id/action_nav_map_to_nearby_favor_list"
            app:destination="@id/nav_nearby_favor_list"
            app:launchSingleTop="true" />
        <action
            android:id="@+id/action_nav_map_to_nav_favorlist"
            app:destination="@id/nav_favorList"
            app:launchSingleTop="true" />
        <action
...
